--- a/BlazorWasm.MelodicJourneysOfCollin/wwwroot/index.html
+++ b/BlazorWasm.MelodicJourneysOfCollin/wwwroot/index.html
@@ -61,7 +61,8 @@
     <script>navigator.serviceWorker.register('service-worker.js');</script>
 
     <!-- JS From MusicUI -->
-    <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+    <!--<script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>-->
+    <script src="assets/jquery-3.7.0.min.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/owl.carousel.min.js"></script>
     <script src="assets/js/jquery.magnific-popup.min.js"></script>
